syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "NotableProto";

package com.namely.protobuf.notable;

import "commands.proto";
import "apis.proto";

service NotableService {
    rpc CreateNote(CreateNoteRequest) returns (Note) {}
    rpc GetNote(GetNoteRequest) returns (Note) {}
    rpc ChangeNote(ChangeNoteRequest) returns (Note) {}
    rpc DeleteNote(DeleteNoteRequest) returns (Note) {}
}
